// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Input snapshot > Input demo snapshot 0 1`] = `
<div>
  <div
    class="bui-input"
  >
    <input
      aria-placeholder="请输入内容"
      class="bui-input-input"
      placeholder="请输入内容"
      type="text"
      value=""
    />
  </div>
</div>
`;

exports[`Input snapshot > Input demo snapshot 0 2`] = `
<div>
  <div
    class="bui-input"
  >
    <div
      class="bui-input-icon bui-input-icon-start"
    >
      <svg
        class="bui-svg-icon"
        color="#959aa5"
        focusable="false"
        viewBox="0 0 96 96"
      >
        <path
          d="M46.3 8c21.2 0 38.3 17.1 38.3 38.3 0 9.7-3.6 18.5-9.5 25.2l12.1 12.1c1 1 1 2.6 0 3.6s-2.6 1-3.6 0l-12-12.1C64.8 81 56 84.6 46.3 84.6 25.1 84.6 8 67.5 8 46.3S25.1 8 46.3 8zm0 6C28.5 14 14 28.5 14 46.3s14.4 32.3 32.3 32.3 32.3-14.4 32.3-32.3S64.1 14 46.3 14z"
        />
      </svg>
    </div>
    <input
      aria-placeholder="请输入内容"
      class="bui-input-input"
      placeholder="请输入内容"
      type="text"
      value=""
    />
  </div>
</div>
`;

exports[`Input snapshot > Input demo snapshot 0 3`] = `
<div>
  <div
    class="bui-input"
  >
    <input
      aria-placeholder="请输入内容"
      class="bui-input-input"
      placeholder="请输入内容"
      type="text"
      value=""
    />
    <div
      class="bui-input-icon bui-input-icon-end"
    >
      <svg
        class="bui-svg-icon"
        color="#959aa5"
        focusable="false"
        viewBox="0 0 96 96"
      >
        <path
          d="M46.3 8c21.2 0 38.3 17.1 38.3 38.3 0 9.7-3.6 18.5-9.5 25.2l12.1 12.1c1 1 1 2.6 0 3.6s-2.6 1-3.6 0l-12-12.1C64.8 81 56 84.6 46.3 84.6 25.1 84.6 8 67.5 8 46.3S25.1 8 46.3 8zm0 6C28.5 14 14 28.5 14 46.3s14.4 32.3 32.3 32.3 32.3-14.4 32.3-32.3S64.1 14 46.3 14z"
        />
      </svg>
    </div>
  </div>
</div>
`;

exports[`Input snapshot > Input demo snapshot 0 4`] = `
<div>
  <div
    class="bui-input"
  >
    <input
      aria-placeholder="请输入内容"
      class="bui-input-input"
      placeholder="请输入内容"
      type="text"
      value=""
    />
  </div>
  <div
    style="margin: 20px 0px 10px;"
  >
    非受控也会清空输入框：
  </div>
  <div
    class="bui-input"
  >
    <input
      class="bui-input-input"
      type="text"
      value="会清空内容"
    />
  </div>
</div>
`;

exports[`Input snapshot > Input demo snapshot 0 5`] = `
<div>
  <div
    class="bui-input bui-input-disabled"
  >
    <input
      aria-disabled="true"
      aria-placeholder="请输入内容"
      class="bui-input-input"
      disabled=""
      placeholder="请输入内容"
      type="text"
    />
  </div>
</div>
`;

exports[`Input snapshot > Input demo snapshot 0 6`] = `
<div>
  <div>
    <div
      style="display: flex; flex-direction: column; margin-bottom: 40px;"
    >
      受控组件：
      <button
        class="bui-btn bui-btn-outlined bui-btn-medium"
        type="button"
      >
        数量加10
      </button>
      <br />
      <div
        class="bui-input"
      >
        <input
          class="bui-input-input"
          type="text"
          value="0"
        />
      </div>
    </div>
    <div
      style="display: flex; flex-direction: column;"
    >
      非受控组件：
      <br />
      <button
        class="bui-btn bui-btn-outlined bui-btn-medium"
        type="button"
      >
        数量减10(操作defaultValue无效)
      </button>
      <br />
      <button
        class="bui-btn bui-btn-outlined bui-btn-medium"
        type="button"
      >
        数量乘2(通过DOM操作value有效)
      </button>
      <br />
      <div
        class="bui-input"
      >
        <input
          class="bui-input-input"
          type="text"
          value="100"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Input snapshot > Input demo snapshot 0 7`] = `
<div>
  <div
    class="bui-input"
  >
    <input
      aria-placeholder="请输入数字"
      class="bui-input-input"
      placeholder="请输入数字"
      type="number"
      value=""
    />
  </div>
</div>
`;
